--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
      gap: 30px;  
     background: #7667fe;;
   }
+ 
 
   .header-element{
     /* background-color: red; */
@@ -41,12 +42,12 @@
   position: absolute;
   width: 10px;
   height: 10px;
-  background-color: white;
+ 
   border-radius: 50%;
   top: 0%;
   right: 0;
   background-color: red;
-  border: 3px solid;
+  border: 3px solid white;
 
  }
 .icon{
@@ -92,6 +93,65 @@
   box-shadow: -2px 0px 2px #9aefdd;
 }
 
+.notification-box{
+  width: 30vw;
+  
+  background-color: white;
+  /* display: flex;
+  justify-content: center; */
+  /* border: 2px solid red; */
+  box-shadow: 0px 0px 15px 0px blueviolet;
+  border-radius: 5px;
+  position: absolute;
+    top: 135%;
+    left: -109%;
+}
+.notification-box::before{
+  width: 0px;
+  height: 0px;
+  /* background: red; */
+  content: "";
+  position: absolute;
+  /* margin-left: -10px; */
+  transform: translateX(-50%) rotate(-45deg);
+  left: 50%;
+  border-right: 10px solid white;
+  border-top: 10px solid white; 
+  border-left: 10px solid transparent; 
+  border-bottom: 10px solid transparent; 
+  top: -10px;
+}
+.notification-item{
+  display: flex;
+  /* background-color: red; */
+transition: 0.3s;
+padding: 1rem;
+  gap: 10px;
+  border-bottom: 1px solid #ddd; 
+ color: #999;
+ }
+ .notification-item strong{
+  color: #444;
+ }
+ .notification-item:hover{
+  background-color: #f7faff;
+ }
+.notification-img{
+  position: relative;
+  display: flex;
+}
 
+.notification-img .active{
+  top: -2px;
+  right: -2px;
 
+}
+.view{
+  width: 100%;
+  padding: 1rem;
+  background-color: #ebfaff;
+  border: none;
+  color: #5ed8ff;
+  font-weight: 600;
+}
 
